# censoargentino

./: .gitignore  ACERCA.md  GUIA.md  LICENSE  MCP.md  POR_QUE.md  README.md  pyproject.toml
censoargentino/: __init__.py  _analysis.py  _client.py  _geo.py  mcp_server.py
ciut/: __init__.py  _client.py  _constants.py
examples/: analisis_completo.ipynb  analisis_demografico.ipynb  ejemplo.py  ejemplos_censo_2022.ipynb  intro_analisis_censal.ipynb  prueba_funciones.ipynb  test_mcp_server.ipynb
