[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "censoargentino"
version = "0.1.9"
description = "Cliente Python para el censo argentino 2022 (INDEC)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "pedroorden" },
]
keywords = ["censo", "argentina", "indec", "duckdb", "datos abiertos"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "duckdb>=0.10.0",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/pedroorden/censoargentino"
Repository = "https://github.com/pedroorden/censoargentino"

[project.optional-dependencies]
geo = [
    "geopandas>=0.13",
    "pyarrow>=12",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
censoargentino-mcp = "censoargentino.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["censoargentino*"]
